--- a/reservation-system/src/main/resources/application.properties
+++ b/reservation-system/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=reservation-system
 server.port = 8070
+
+spring.datasource.url=jdbc:postgresql://localhost:5434/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
